# baby_its_me

./: Cargo.toml  README.md
snark/: Makefile  abi.json  out.r1cs  signature.zok  types.zok  verification.key
solution/: Cargo.toml  README.md
solution/src/: lib.rs
verifier/: foundry.toml
verifier/script/: Verifier.s.sol
verifier/src/: BabyItsMe.sol
verifier/test/: Verifier.t.sol
